xwayland: Guard against xwyayland connection closing in input spy

The event spy is removed when xwayland closed, but it's based on the
process not the wayland socket, so it can be temporarily out of sync.

There were no guards for the connection being null.

BUG: 471789